# Seams

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AUTH_TOKENS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  Seams_TODO.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: code-review-2026-03-24.md
seams-v1.4.1/: CHANGELOG.md  README.md  SETUP_AUTH.md  TASKS.md  agent_core_detect.py  seams.py
seams-v1.4.1/agent-core/: pyproject.toml
seams-v1.4.1/agent-core/src/: agent_server.py
seams-v1.4.1/agent-core/src/my_agent/: llm.py  runtime.py
seams-v1.4.1/agent-core/src/my_agent/graphs/: __init__.py  lint_flow.py  refactor_flow.py
seams-v1.4.1/agent-core/src/my_agent/tools/: tool_refactor.py
seams-v1.4.1/agent-core/tests/: test_graph_lint.py  test_graphs.py  test_refactor.py  test_server.py
seams-v1.4.1/macros-vscode/: package.json  tsconfig.json
seams-v1.4.1/macros-vscode/signatures/: refactor_python_function.json
seams-v1.4.1/macros-vscode/src/: extension.ts  rpc-agent.ts  signature-loader.ts
seams-v1.4.1/prompts/: sig.lint_fix.v1.jinja  sig.refactor.v1.jinja
seams-v1.4.1/scripts/: validate_signature.py
src/seams/: __init__.py
tests/: conftest.py  test_init.py
